syntax = "proto3";

package scheduler.middleware.sentinel.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/scheduler/middleware/v1/sentinel";

message BenefitWait {
  repeated string GoodIDs = 10;
  uint32 RewardAt = 20;
}
